--- a/.github/workflows/build_release_nightly_yyc.yml
+++ b/.github/workflows/build_release_nightly_yyc.yml
@@ -1,10 +1,11 @@
-name: Build-Windows-YYC
+name: Build-for-Windows-YYC
 on: 
   # push: #Uncomment this line to run the workflow on push
   workflow_dispatch: #This line allows you to run the workflow manually from the GitHub Actions page
   # workflow_call: #This line allows you to run the workflow from another workflow
 jobs:
   build:
+    name: Build and Release a Nightly version
     runs-on: windows-2022
     steps:
       # Check out the repository with the GameMaker project
@@ -49,12 +50,36 @@ jobs:
         with:
           yyp-path: ${{ steps.find_yyp.outputs.yyp-path }}
           user-dir: ${{ steps.igor_setup.outputs.user-dir }}
-          yyc: false
-      # This step uploads the build to the artifacts, so you can download it from the GitHub Actions page or use it in another workflow
-      - id: upload_artifact
-        name: Upload Build as an Artifact
-        uses: actions/upload-artifact@v4
+          name: ChapterMaster-${{ env.date_time }}-Windows.zip
+          yyc: true
+      - name: Check if a nightly release exists
+        id: check_nightly
+        run: |
+          gh release view nightly --repo ${{ github.repository }}
+          if [ $? -eq 0 ] ; then
+            echo "release_exists=true" >> $GITHUB_OUTPUT;
+          else
+            echo "release_exists=false" >> $GITHUB_OUTPUT;
+          fi
+        shell: bash
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - id: delete_release_tag
+        name: Delete the existing nightly tag and release
+        if: steps.check_nightly.outputs.release_exists
+        run: |
+          gh release delete nightly -y --cleanup-tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - id: create_release
+        name: Create a Pre-Release and Upload the build
+        uses: softprops/action-gh-release@v2.0.9
         with:
-          name: ChapterMaster-Windows-b${{ env.date_time }}
-          path: ${{ steps.igor_build.outputs.out-dir }}
-          retention-days: 1 # Longer retention days can incur additional charges. See https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts
+          name: ChapterMaster-${{ env.date_time }}
+          tag_name: nightly
+          prerelease: true
+          generate_release_notes: true
+          make_latest: true
+          files: |
+            ${{ steps.igor_build.outputs.out-dir }}/*
