chore: Update build_release_nightly_yyc.yml

--- a/.github/workflows/build_release_nightly_yyc.yml
+++ b/.github/workflows/build_release_nightly_yyc.yml
@@ -1,4 +1,4 @@
-name: Build-for-Windows-YYC
+name: Nightly-for-Windows-YYC
 on: 
   # push: #Uncomment this line to run the workflow on push
   workflow_dispatch: #This line allows you to run the workflow manually from the GitHub Actions page
