--- a/.github/workflows/build_release_nightly_yyc.yml
+++ b/.github/workflows/build_release_nightly_yyc.yml
@@ -77,7 +77,7 @@ jobs:
         name: Create a Pre-Release and Upload the build
         uses: softprops/action-gh-release@v2.0.9
         with:
-          name: ChapterMaster-${{ env.date_time }}
+          name: ChapterMaster ${{ env.date_time }}
           tag_name: nightly
           prerelease: true
           generate_release_notes: true
