chore(workflows): Update release.yml

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -4,6 +4,8 @@ changelog:
   exclude:
     labels:
       - "PR: Docs"
+      - "PR: Code Style"
+      - "PR: Chore"
   categories:
     - title: Possibly Breaking Changes
       labels:
@@ -12,10 +14,15 @@ changelog:
     - title: New/Changed
       labels:
         - "PR: Feature"
+        - "PR: Enhancement"
+        - "PR: Balance"
         - "PR: Misc Change"
     - title: Fixes
       labels:
         - "PR: Fix"
+    - title: Under The Hood
+      labels:
+        - "PR: Refactor"
         - "PR: Performance"
     - title: Other Changes
       labels:
