--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,9 @@
 # Re-classify .yy files (for GMS 2 projects)
 *.yy linguist-language=GML
 
+# YYP files are ignored by the diff by default for some reason.
+*.yyp linguist-generated=false
+
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
