--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Re-classify .yy files (for GMS 2 projects)
 *.yy linguist-language=GML
+*.yyp linguist-language=GML
 
 # YYP files are ignored by the diff by default for some reason.
 *.yyp linguist-generated=false
