chore: Add gitignore and gitattributes to labeler (#96)

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,7 +10,7 @@
 
 "PR: Chore":
 - changed-files:
-  - any-glob-to-all-files: ['.github/*', '**/*.yml']
+  - any-glob-to-all-files: ['.github/*', '**/*.yml', '.gitattributes', '.gitignore']
 
 "PR: Refactor":
 - head-branch: ['^refactor', 'refactor', '^ref', 'ref']
