--- a/.github/workflows/nightly_yyc.yml
+++ b/.github/workflows/nightly_yyc.yml
@@ -14,22 +14,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+  
       - name: Check Commmit
         id: commit_check
         run: |
           COMMIT_MESSAGE=$(git log -1 --pretty=%B)
           echo "Merge commit message: $COMMIT_MESSAGE"
           
-          EXCLUDE_PATTERN="^(docs|chore|style|test-only)"
+          EXCLUDE_PATTERN="^(docs|chore|style)"
           
-          for PREFIX in "${EXCLUDE_PREFIXES[@]}"; do
-            if [[ "$COMMIT_MESSAGE" == $PREFIX* ]]; then
-              echo "Commit message starts with '$PREFIX', build skipped."
-              echo "::set-output name=needed::false"
-              exit 0
-            fi
-          done
-          echo "::set-output name=needed::true"
+          if echo "$COMMIT_MESSAGE" | grep -Eq "$EXCLUDE_PATTERN"; then
+            echo "Commit message matches excluded pattern, skipping build."
+            echo "needed=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          echo "needed=true" >> $GITHUB_OUTPUT
 
   gamemaker_build:
     name: Build
