chore: auto-build method is back to YYC (#125)

--- a/.github/workflows/nightly_yyc.yml
+++ b/.github/workflows/nightly_yyc.yml
@@ -37,6 +37,8 @@ jobs:
     secrets: inherit
     needs: build_needed
     if: needs.build_needed.outputs.needed == 'true'
+    with:
+      yyc: true
 
   release:
     name: Release
