--- a/.github/workflows/release_yyc.yml
+++ b/.github/workflows/release_yyc.yml
@@ -10,6 +10,7 @@ jobs:
     secrets: inherit
     with:
       development: false
+      yyc: true
   release:
     name: Release
     runs-on: windows-2022
