ci: Update gamemaker_build.yml (#133)

--- a/.github/workflows/gamemaker_build.yml
+++ b/.github/workflows/gamemaker_build.yml
@@ -48,9 +48,9 @@ jobs:
           }
 
           if ("${{ inputs.development }}" -eq "true") {
-            echo "::set-output name=suffix::$BuildDate"
+            echo "suffix=$Version-$BuildDate" >> $GITHUB_OUTPUT
           } else {
-            echo "::set-output name=suffix::$Version"
+            echo "suffix=$Version" >> $GITHUB_OUTPUT
           }
   
           # Create the version.json content
@@ -64,9 +64,9 @@ jobs:
           Set-Content -Path datafiles/main/version.json -Value $VersionJson
           
           # Set outputs for version, build date, and commit hash
-          echo "::set-output name=version::$Version"
-          echo "::set-output name=build_date::$BuildDate"
-          echo "::set-output name=commit_hash::$CommitHash"
+          # echo "version=$Version" >> $GITHUB_OUTPUT
+          # echo "build_date=$BuildDate" >> $GITHUB_OUTPUT
+          # echo "commit_hash=$CommitHash" >> $GITHUB_OUTPUT
 
       # This step finds the yyp file in the repository and saves the path to an output
       - id: find_yyp
@@ -105,7 +105,8 @@ jobs:
           
       # Upload built file as an artifact
       - name: Upload built file as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: built-file
           path: ${{ steps.igor_build.outputs.out-dir }}
+          retention-days: 1
