--- a/.github/workflows/nightly_yyc.yml
+++ b/.github/workflows/nightly_yyc.yml
@@ -79,7 +79,7 @@ jobs:
         uses: softprops/action-gh-release@v2.0.9
         with:
           name: ChapterMaster ${{ needs.gamemaker_build.outputs.suffix }}
-          tag_name: nightly
+          tag_name: nightly/${{ github.ref_name }}
           prerelease: true
           generate_release_notes: true
           make_latest: true
