chore: Update label names for labeler

--- a/.github/srvaroa_labeler.yml
+++ b/.github/srvaroa_labeler.yml
@@ -21,6 +21,6 @@ labels:
 - label: "PR: Performance"
   body: "(perf|performance)"
 
-- label: "PR: Major Feat!"
+- label: "PR: Major Coding"
   size:
     above: 800
