--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,6 +16,7 @@ changelog:
         - "PR: Feature"
         - "PR: Enhancement"
         - "PR: Balance"
+        - "PR: Text"
         - "PR: Misc Change"
     - title: Fixes
       labels:
@@ -23,7 +24,6 @@ changelog:
     - title: Under The Hood - Important!
       labels:
         - "PR: Major Code Changes"
-        - "PR: Performance"
     - title: Under The Hood
       labels:
         - "PR: Refactor"
