--- a/.github/srvaroa_labeler.yml
+++ b/.github/srvaroa_labeler.yml
@@ -1,25 +1,45 @@
 version: 1
 appendOnly: true
 labels:
+- label: "PR: Breaking!"
+  title: "!"
+- label: "PR: Breaking!"
+  body: "\[breaking\]"
+
+- label: "PR: Chore"
+  title: "^chore"
+- label: "PR: Chore"
+  body: "\[chore\]"
+
+- label: "PR: Docs"
+  title: "^docs"
+- label: "PR: Docs"
+  body: "(\[docs\]|\[doc\])"
+
+- label: "PR: Code Style"
+  title: "^style"
+- label: "PR: Code Style"
+  body: "\[style\]"
+
 - label: "PR: Feature"
-  title: "(feat|feature|new|add)"
+  title: "^feat"
 - label: "PR: Feature"
-  body: "(feat|feature|new|add)"
+  body: "(\[feature\]|\[feat\])"
 
 - label: "PR: Fix"
-  title: "(fix|repair)"
+  title: "^fix"
 - label: "PR: Fix"
-  body: "(fix|repair)"
+  body: "\[fix\]"
 
 - label: "PR: Refactor"
-  title: "(refactor|ref)"
+  title: "^refactor"
 - label: "PR: Refactor"
-  body: "(refactor|ref)"
+  body: "(\[refactor\]|\[ref\])"
 
 - label: "PR: Performance"
-  title: "(perf|performance)"
+  title: "^perf"
 - label: "PR: Performance"
-  body: "(perf|performance)"
+  body: "(\[performance\]|\[perf\])"
 
 - label: "PR: Major Coding"
   size:
