--- a/.github/srvaroa_labeler.yml
+++ b/.github/srvaroa_labeler.yml
@@ -2,7 +2,7 @@ version: 1
 appendOnly: true
 labels:
 - label: "PR: Breaking!"
-  title: "!"
+  title: "\!"
 - label: "PR: Breaking!"
   body: "(?i)\[breaking\]"
 
