ci: I will never learn actions

--- a/.github/workflows/nightly_yyc.yml
+++ b/.github/workflows/nightly_yyc.yml
@@ -10,13 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       needed: ${{ steps.commit_check.outputs.needed }}  # Output for skipping
-    if: ${{ github.event_name != 'workflow_dispatch' }}  # Skip this job if manually triggered
     steps:
       - uses: actions/checkout@v4
         with:
           lfs: true
   
-      - name: Check Commmit
+      - name: Check Commit
         id: commit_check
         run: |
           COMMIT_MESSAGE=$(git log -1 --pretty=%B)
@@ -24,13 +23,16 @@ jobs:
           
           EXCLUDE_PATTERN="^(docs|chore|style|ci)"
           
-          if echo "$COMMIT_MESSAGE" | grep -Eq "$EXCLUDE_PATTERN"; then
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "Manually triggered, forcing build."
+            echo "needed=true" >> $GITHUB_OUTPUT
+          elif echo "$COMMIT_MESSAGE" | grep -Eq "$EXCLUDE_PATTERN"; then
             echo "Commit message matches excluded pattern, skipping build."
             echo "needed=false" >> $GITHUB_OUTPUT
             exit 0
+          else
+            echo "needed=true" >> $GITHUB_OUTPUT
           fi
-          
-          echo "needed=true" >> $GITHUB_OUTPUT
 
   gamemaker_build:
     name: Build
