ci: Will this ever end

--- a/.github/workflows/gamemaker_build.yml
+++ b/.github/workflows/gamemaker_build.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Check suffix
         shell: pwsh
         run: |
-          echo "Suffix is: ${{ steps.version_info.outputs.suffix }}"
+          echo "Suffix is: ${{ outputs.suffix }}"
 
       # This step finds the yyp file in the repository and saves the path to an output
       - id: find_yyp
