--- a/.github/workflows/release_stable.yml
+++ b/.github/workflows/release_stable.yml
@@ -1,4 +1,4 @@
-name: Release-Windows-YYC
+name: Release-Stable
 on: 
   push:
     tags:        
@@ -20,7 +20,7 @@ jobs:
         with:
           lfs: true
       - name: Download built file artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: built-file
           path: ./build_output
