--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -1,12 +1,21 @@
-name: Nightly-Windows-YYC
+name: Release-Development
 on: 
   workflow_dispatch:
+    inputs:
+      compiler:
+        type: choice
+        description: What compiler to use?
+        required: true
+        default: YYC
+        options: 
+          - YYC
+          - VM
   push:
     branches:
       - compile/main
 jobs:
   build_needed:
-    name: Build Needed?
+    name: Build needed?
     runs-on: ubuntu-latest
     outputs:
       needed: ${{ steps.commit_check.outputs.needed }}  # Output for skipping
@@ -15,7 +24,7 @@ jobs:
         with:
           lfs: true
   
-      - name: Check Commit
+      - name: Check commit
         id: commit_check
         run: |
           COMMIT_MESSAGE=$(git log -1 --pretty=%B)
@@ -41,7 +50,7 @@ jobs:
     needs: build_needed
     if: needs.build_needed.outputs.needed == 'true'
     with:
-      yyc: true
+      yyc: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.compiler == 'YYC' || github.event_name != 'workflow_dispatch' }}
 
   release:
     name: Release
@@ -52,10 +61,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Check if a nightly release exists
-        id: check_nightly
+      - name: Check if a dev release exists
+        id: check_release
         run: |
-          gh release view nightly/${{ github.ref_name }} --repo ${{ github.repository }}
+          gh release view dev/${{ github.ref_name }} --repo ${{ github.repository }}
           if [ $? -eq 0 ] ; then
             echo "release_exists=true" >> $GITHUB_OUTPUT;
           else
@@ -66,10 +75,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - id: delete_release_tag
-        name: Delete the existing nightly tag and release
-        if: steps.check_nightly.outputs.release_exists
+        name: Delete the existing dev tag and release
+        if: steps.check_release.outputs.release_exists
         run: |
-          gh release delete nightly/${{ github.ref_name }} -y --cleanup-tag
+          gh release delete dev/${{ github.ref_name }} -y --cleanup-tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Download built file artifact
@@ -78,11 +87,11 @@ jobs:
           name: built-file
           path: ./build_output
       - id: create_release
-        name: Create a Pre-Release and Upload the build
+        name: Create a release and upload the build
         uses: softprops/action-gh-release@v2.0.9
         with:
           name: ChapterMaster ${{ needs.gamemaker_build.outputs.suffix }}
-          tag_name: nightly/${{ github.ref_name }}
+          tag_name: dev/${{ github.ref_name }}
           prerelease: true
           generate_release_notes: true
           make_latest: true
