--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -12,9 +12,9 @@
 
 "PR: Audio":
 - changed-files:
-  - any-glob-to-any-files: ['**/snd_*', '**/*.ogg', '**/*.wav']
+  - any-glob-to-any-file: ['**/snd_*', '**/*.ogg', '**/*.wav']
 
 "PR: Sprites":
 - changed-files:
-  - any-glob-to-any-files: ['**/*.png', '**/spr_*']
+  - any-glob-to-any-file: ['**/*.png', '**/spr_*']
   
