--- a/.github/srvaroa_labeler.yml
+++ b/.github/srvaroa_labeler.yml
@@ -1,45 +1,45 @@
 version: 1
 appendOnly: true
 labels:
-- label: "PR: Breaking\!"
-  title: "\!"
-- label: "PR: Breaking\!"
-  body: "(?i)\[breaking\]"
+- label: "PR: Breaking!"
+  title: "\\!"
+- label: "PR: Breaking!"
+  body: "(?i)\\[breaking\\]"
 
 - label: "PR: Chore"
   title: "^chore"
 - label: "PR: Chore"
-  body: "(?i)\[chore\]"
+  body: "(?i)\\[chore\\]"
 
 - label: "PR: Docs"
   title: "^docs"
 - label: "PR: Docs"
-  body: "(?i)(\[docs\]|\[doc\])"
+  body: "(?i)(\\[docs\]|\\[doc\\])"
 
 - label: "PR: Code Style"
   title: "^style"
 - label: "PR: Code Style"
-  body: "(?i)\[style\]"
+  body: "(?i)\\[style\\]"
 
 - label: "PR: Feature"
   title: "^feat"
 - label: "PR: Feature"
-  body: "(?i)(\[feature\]|\[feat\])"
+  body: "(?i)(\\[feature\\]|\\[feat\\])"
 
 - label: "PR: Fix"
   title: "^fix"
 - label: "PR: Fix"
-  body: "(?i)\[fix\]"
+  body: "(?i)\\[fix\\]"
 
 - label: "PR: Refactor"
   title: "^refactor"
 - label: "PR: Refactor"
-  body: "(?i)(\[refactor\]|\[ref\])"
+  body: "(?i)(\\[refactor\\]|\\[ref\\])"
 
 - label: "PR: Performance"
   title: "^perf"
 - label: "PR: Performance"
-  body: "(?i)(\[performance\]|\[perf\])"
+  body: "(?i)(\\[performance\\]|\\[perf\\])"
 
 - label: "PR: Major Coding"
   size:
