ci: Fix the auto-compile tag target?

--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -95,5 +95,6 @@ jobs:
           prerelease: true
           generate_release_notes: true
           make_latest: true
+          target_commitish: ${{ github.ref_name }}
           files: |
             ./build_output/${{ needs.gamemaker_build.outputs.built_file }}/*
