--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -12,7 +12,7 @@ on:
           - VM
   push:
     branches:
-      - compile/main
+      - release/0.9
 jobs:
   build_needed:
     name: Build needed?
