ci: Change version display

--- a/.github/workflows/gamemaker_build.yml
+++ b/.github/workflows/gamemaker_build.yml
@@ -40,7 +40,7 @@ jobs:
           $CommitHash = git rev-parse --short HEAD
 
           try {
-            $Version = "${{ github.ref_name }}".Replace("/", "-")
+            $Version = "${{ github.ref_name }}".Split('/')[-1]
           } catch {
             # If no tags exist, use the commit hash as the version
             Write-Warning "No tags found, using commit hash as version."
@@ -48,7 +48,7 @@ jobs:
           }
 
           if ("${{ inputs.development }}" -eq "true") {
-            $suffix = "$Version-$BuildDate"
+            $suffix = "dev-$Version-$BuildDate"
           } else {
             $suffix = $Version
           }
