ci: More title checker triggers (#437)

--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -4,6 +4,9 @@ on:
     types:
       - opened
       - edited
+      - ready_for_review
+      - synchronize
+      - review_requested
 
 jobs:
   check:
