--- a/.github/srvaroa_labeler.yml
+++ b/.github/srvaroa_labeler.yml
@@ -41,18 +41,30 @@ labels:
 - label: "PR: Performance"
   body: "(?i)(\\[performance\\]|\\[perf\\])"
 
+- label: "Size: Tiny"
+  size:
+    below: 50
+
+- label: "Size: Small"
+  size:
+    above: 49
+    below: 200
+
 - label: "Size: Medium"
   size:
-    above: 200
+    above: 199
+    below: 400
 
 - label: "Size: Big"
   size:
-    above: 400
+    above: 399
+    below: 800
 
 - label: "Size: Huge"
   size:
-    above: 800
+    above: 799
+    below: 1600
 
 - label: "Size: Epic"
   size:
-    above: 1600
+    above: 1599
