ci: Area and Category label prefixes (#692)

--- a/.github/pr_labeler_contents.yml
+++ b/.github/pr_labeler_contents.yml
@@ -1,9 +1,9 @@
 version: 1
 appendOnly: true
 labels:
-- label: "Breaking\\!"
+- label: "Type: Breaking"
   title: "\\!"
-- label: "Breaking\\!"
+- label: "Type: Breaking"
   body: "(?i)\\[breaking\\]"
 
 - label: "Type: Chore"
